--- a/package.json
+++ b/package.json
@@ -3,14 +3,35 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
+    "format": "prettier --write ."
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
+    "@structure-codes/cli": "^0.0.6",
+    "@tanstack/react-query": "^5.59.16",
+    "@tanstack/react-query-devtools": "^5.59.16",
+    "axios": "^1.7.7",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^9.1.2",
+    "sass": "^1.80.4"
   },
   "engines": {
     "node": ">=18"
+  },
+  "devDependencies": {
+    "@rocketseat/eslint-config": "^2.2.2",
+    "@types/node": "22.8.1",
+    "@types/react": "^18.3.12",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^15.0.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "prettier": "^3.3.3",
+    "typescript": "^5.6.3"
   }
 }
