--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.59.16",
     "@tanstack/react-query-devtools": "^5.59.16",
     "axios": "^1.7.7",
+    "framer-motion": "^11.11.10",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
