--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,26 @@
 {
   "extends": [
+    "next",
     "next/core-web-vitals",
-    "@rocketseat/eslint-config/react",
+    "plugin:react/recommended",
     "plugin:prettier/recommended"
-  ]
+  ],
+  "rules": {
+    "react/react-in-jsx-scope": "off",
+    "prettier/prettier": [
+      "error",
+      {
+        "semi": true,
+        "singleQuote": true,
+        "trailingComma": "all",
+        "arrowParens": "avoid",
+        "endOfLine": "lf"
+      }
+    ]
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  }
 }
