--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "build": "next build",
     "dev": "next dev",
     "start": "next start",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "prepare": "husky",
+    "precommit": "npm run format && npm run lint"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
@@ -18,20 +20,23 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^9.1.2",
-    "sass": "^1.80.4"
+    "sass": "^1.80.4",
+    "zod": "^3.23.8"
   },
   "engines": {
     "node": ">=18"
   },
   "devDependencies": {
-    "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "22.8.1",
     "@types/react": "^18.3.12",
     "eslint": "^8.57.1",
     "eslint-config-next": "^15.0.1",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-hooks": "4.6.2",
+    "husky": "^9.1.6",
     "prettier": "^3.3.3",
     "typescript": "^5.6.3"
   }
