--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
   ],
   "rules": {
     "react/react-in-jsx-scope": "off",
+    "@next/next/no-img-element": "off",
     "prettier/prettier": [
       "error",
       {
@@ -14,7 +15,8 @@
         "singleQuote": true,
         "trailingComma": "all",
         "arrowParens": "avoid",
-        "endOfLine": "lf"
+        "endOfLine": "lf",
+        "printWidth": 80
       }
     ]
   },
