--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "next dev",
     "start": "next start",
     "format": "prettier --write .",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "lint": " npx prettier --write '**/*.{js,jsx,ts,tsx,scss}' && eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "prepare": "husky",
     "precommit": "npm run format && npm run lint"
   },
